objects/Sales_District_Assignment__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Sales District Assignments</relationshipLabel>
        <relationshipName>Sales_District_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_District__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales District</label>
        <referenceTo>Sales_District__c</referenceTo>
        <relationshipLabel>Sales District Assignments</relationshipLabel>
        <relationshipName>Sales_District_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Zone_District_Subdivision__c</fullName>
        <formula>Sales_District__r.Sales_Zone_Identifier__r.Name &amp;&quot;-&quot; &amp; Sales_District__r.Name &amp; &quot;-&quot; &amp; TEXT(Sales_District__r.SubDivision__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Zone-District-Subdivision</label>
        <type>Text</type>
    </fields>
    <label>Sales District Assignment</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Sales District Assignment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales District Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>